--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,8 @@
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: 255, 255, 255; 
+  --bookit-green: rgb(0, 148, 116); 
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -37,16 +38,19 @@
   --callout-rgb: 238, 240, 241;
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --card-border-rgb: 131, 134, 135; 
+
 } 
 
 * {
-  color: rgb(0, 148, 116); 
+  
 }
 
 body { 
   font-family: var(--font-mono); 
-  background: linear-gradient(to right, #010757, #12197e); /* Dark blue gradient background */ 
+  background: white; /* Dark blue gradient background */ 
+  margin: 0px; 
+  padding: 0px; 
   
 }
 
@@ -62,11 +66,81 @@ h1 {
 } 
 
 .btn { 
+  background: rgb(19, 62, 255); 
+  border-radius: 10px; 
+  font-display: flex;
+  align-items: center; 
+  padding: 0px; 
+  margin: 0px; 
+  
+} 
+
+.btn-text { 
   color: white; 
   font-size: 40px; 
   text-decoration: none; 
-  color: var(--primary-glow); 
-  border: 2px solid; 
-  border-radius: 10px; 
   
 }
+
+
+
+.post-icon-div p {
+  padding-left: 2%; 
+}
+
+.content-in-post { 
+  padding-left: 10px; 
+  margin: 0px; 
+} 
+
+.content-in-post h1 {
+  margin: 0px; 
+} 
+
+.post-icons {
+  width: 10%; 
+  margin-left: 1%; 
+  
+} 
+
+.post-image {
+  width: 100%; 
+} 
+
+.bookit-certified-div {  
+  color: #43A047; 
+  display: flex; 
+} 
+
+.bookit-certified-div p {  
+  color: #43A047; 
+} 
+
+.bookit-certified-div img { 
+  width: 20px; 
+  padding: 5px; 
+} 
+
+.home-div {
+  display: grid; 
+  grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));  
+  gap: 10px; 
+} 
+
+.post-div-link {
+  text-decoration: none; 
+  color: black; 
+}
+
+.post-div {
+  width: 100%; 
+  font-size: 10px; 
+  border: 2px solid black; 
+  border-radius: 10px; 
+  margin: 0px; 
+}
+
+
+
+
+
